@@ -170,6 +170,7 @@ Vue.component('lms-manage-players', {
    </v-container>
   </div>
   <div class="dialog-padding"></div>
+  <div class="dialog-bottom-pad"></div>
  </v-card>
 
  <v-menu offset-y v-model="menu.show" :position-x="menu.x" :position-y="menu.y">
