@@ -375,6 +375,7 @@ Vue.component('lms-ui-settings', {
    </v-list-tile>
 
     <div class="dialog-padding"></div>
+    <div class="dialog-bottom-pad"></div>
    </v-list>
   </v-card-text>
  </v-card>
